@@ -5,6 +5,11 @@ version 1.2.8
 - add option to export data to PcGive .dat format (thanks to
   Michal Kurcewicz)
 - enable TRAMO analysis of annual time-series data
+- Windows version: ensure user directory gets created
+- hccm command: ensure that the F-stat shown for the model
+  is based on the robust covariance matrix; also ensure
+  the robust F is shown when robust standard errors are
+  selected with the ols command
 - add start-up option to dump gretl configuration to a text file
   ('-c' or '--dump')
 
